[package]
name = "dsp"
version = "0.10.0"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Digital Signal Processing"
keywords = ["dsp"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/dsp"
homepage = "https://github.com/klangner/dsp"
documentation = "https://docs.rs/dsp"
edition = "2018"


[dependencies]
anyhow = "1.0"
arraydeque = "^0.4"
itertools = "^0.10"
num-complex = "^0.4"
rustfft = "^6"
rand_distr = "^0.4"
audrey = "^0.3"
rand = "^0.8"

[dev-dependencies]
assert_approx_eq = "^1.1"
gnuplot = "^0.0.37"
clap = "^2"
lewton = "^0.10"
criterion = "^0.3"
transpose = "^0.2"
pitch_calc = "^0.12"

[[bench]]
name = "gen_bench"
harness = false
