[package]
name = "dsp"
version = "0.10.1"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Digital Signal Processing"
keywords = ["dsp"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/dsp"
homepage = "https://github.com/klangner/dsp"
documentation = "https://docs.rs/dsp"
edition = "2018"

[features]
default = []
audio = ["cpal", "audrey"]
random = ["rand", "rand_distr"]

[dependencies]
anyhow = "1.0"
arraydeque = "^0.4"
itertools = "^0.10"
num-complex = "^0.4"
rustfft = "^6"
cpal = { version = "0.13.4", optional = true }
audrey = { version = "^0.3", optional = true }
rand = { version = "^0.8", optional = true }
rand_distr = {version = "^0.4", optional = true }

[dev-dependencies]
assert_approx_eq = "^1.1"
gnuplot = "^0.0.37"
clap = "^2"
lewton = "^0.10"
criterion = "^0.3.5"
transpose = "^0.2"
pitch_calc = "^0.12"
crossbeam-deque = "0.8"

[[bench]]
name = "gen_bench"
harness = false

[[example]]
name = "tuner"
required-features = ["audio"]

[[example]]
name = "spectrum"
required-features = ["random"]

[[example]]
name = "plot"
required-features = ["random"]